src/scss/style.scss
/* exportieren von hier in states gliedern?? */ 

html,
body {
		height: 100vh;
		width: 100vw;
}
* {
	font-family: 'Bungee', sans-serif !important;
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
	box-sizing: border-box;
}

/* All State Background */
.state {
	position: relative;
	width: 100vw;
	height: 100vh;
	overflow: hidden;
	background-image: url('../assets/images/background/BG-1.png');
	background-size: cover;
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-direction: column;
}

/* Game State Controller */
.controller {
	display: flex;
	align-items: flex-end;
	flex-direction: row;
}

.controller__buttons__direction,
.controller__buttons__direction
.controller__movement {
	flex: 1;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
}

.button {

	&--left, &--right {
		display: flex;
		align-items: center;
		justify-content: center;
	}
}

.controller__buttons_direction span {
	display:block;
}

/* Character Selection State*/
.selection__wrapper {
	width: 90%;
	z-index: 2;
	flex: 4;
	display:flex;
	justify-content: space-between;
	align-items: center;
}

.selection__headline {
	text-align: center;
}

.selection__character_preview img {
	height: 55vh;
	margin: 5vw;
}

.selection__character_inactive {
	filter: grayscale(100%);
	pointer-events: none;
}

/* Emotes State*/
.emotes__wrapper {
	width: 100%;
	height: 100%;
	z-index: 2;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	.emotes__button__wrapper {
		width: 100%;
		height: 72%;
		display: flex;
		flex-wrap: wrap;
		justify-content: space-evenly;
		align-items: center;
		.emote__button {
			width: 70vh;
			height: 25vh;
			background-image: url('../assets/images/controller/shield.png');
			background-size: 100% 100%;
			background-color: transparent;
			outline: none;
			text-align: center;
			font-size: 1.5em;
		}
	}
	.select__button__wrapper {
		width: 100%;
		height: 28%;
		display: flex;
		justify-content: center;
		align-items: center;
		display: none;
		.button__select {
			width: 55vh;
			height: 16vh;
			margin-bottom: 4%;
			color: #fff;
			font-size: 4.5vh;
		}
	}
}





/* Winning/ Losing State*/
.loosing,
.winning {
	display: flex;
	align-items: center;
	justify-content: center;
}

.winning__text,
.loosing__text {
	z-index: 4;
	position: relative;
	font-family: 'Bungee', cursive;
	font-size: 45px;
}

/* Game State */

/* Game State Controller Buttons*/
.button {
	z-index: 2;
	position: relative;
/*          font-family: sans-serif;
	border-radius: 100%;
	display: flex;
	justify-content: center;
	align-items: center;*/
}

.button__wrapper {
	width: 50vw;
	height: 100vh;
}

.button--shoot {
	height: 50vh;
	width: 50vw;
	border-radius: 0;
	overflow:hidden;
	display:flex;
	align-items: center;
	justify-content: center;
	background-image: url('../assets/images/controller/button.png');
	background-repeat: no-repeat;
	background-size: 100% 100%;
	font-family: 'Bungee', cursive;
}

.button__right--active {
	background-image:url('../assets/images/controller/button-right-selected.svg') !important;
}

.button__left--active {
	background-image:url('../assets/images/controller/button-left-selected.svg') !important;
}

.button--active {
	color: #d3bc9a;
}

.button--jump {
	height: 50vh;
	width: 50vw;
	border-radius: 0;
	display:flex;
	align-items: center;
	justify-content: center;
	overflow:hidden;
	background-image: url('../assets/images/controller/button.png');
	background-repeat: no-repeat;
	background-size: 100% 100%;
	font-family: 'Bungee', cursive;
}

.button--left {
	height: 100vh;
	width: 25vw;
	border-radius: 0;
	overflow:hidden;
	background-image: url('../assets/images/controller/button-left.svg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
}

.button__background {
	position: fixed;
	width: 100%;
	height: 100%;
	object-fit: fill;
}

.button--right {
	height: 100vh;
	width: 25vw;
	border-radius: 0;
	overflow:hidden;
	background-image: url('../assets/images/controller/button-right.svg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
}

.movement {
	width: 50vw;
	height: 100vh;
	position: relative;
}

.movement__stick {
	display:block;
	margin: 0 auto;
}

.character--invisible {
	position: absolute;
	opacity: 0;
}

.button--arrow {
	width: 15vw;
	height: auto;
}

#button__select_left {
	transform: scaleX(-1);
}

.button__select {
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 0;
	font-family: 'Bungee', cursive;
	width: 20vw;
	height: 6vw;
	flex: 1;
	margin-bottom:2%;
	bottom: 0;
	position: absolute;
	background-color: transparent;
	background-image: url('../assets/images/controller/shield.png');
	background-size: 100% 100%;
	background-repeat: no-repeat;
}

.character_selection__name {
	position: absolute;
	top: 5%;
	font-size: 2em;
}

